--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Scramble Game</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Carter+One&family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
@@ -30,7 +30,8 @@ const btn=document.querySelector('.btn');
 let play=false;
 let newWord="";
 let ranWord="";
-let sWords=['rohan','deepak','virat','ranbir','naman','sanjay','varun','alia','priyanka','siddharth','anushka','salman','shahrukh','shraddha']
+let sWords=['table','phone','bottle','marker','refrigerator','charger','plastic','earphone','shoes','almirah','computer','school',
+'tablet','building','window','fruits','elephant','dinosaur','board','cricket','football','hockey','clothes'];
 
 
 
